--- a/index.html
+++ b/index.html
@@ -16,16 +16,24 @@
 <body>
   <header class="header">
     <div class="container header__container flex">
-      <form class="login" action="#" method="post">
-        <h2 class="login__title">Вход</h2>
-        <p class="login__descr">Если у вас ещё нет аккаунта, <a href="#" class="login__link">зарегистрируйтесь</a></p>
-        <label class="login__input-wrap" for="input">
-          <input class="login__input email" type="email" name="email">
-        </label>
-        <label class="login__input-wrap" for="input">
-          <input class="login__input email" type="password" name="password">
-        </label>
-        <button type="submit">Войти</button>
+      <div class="login">
+        <button class="login__closed btn-reset">
+          <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="21" cy="21" r="19.5" stroke="#A1A6B4" stroke-width="3" />
+            <path d="M29.6777 12L12 29.6777M29.6777 29.6777L12 12" stroke="#A1A6B4" stroke-width="3" />
+          </svg>
+        </button>
+        <form class="login__form" action="#" method="post">
+          <h2 class="login__title title">Вход</h2>
+          <p class="login__descr">Если у вас ещё нет аккаунта, <a href="#" class="login__link">зарегистрируйтесь</a></p>
+          <label class="login__input-wrap" for="input">
+            <input class="login__input" type="email" name="email" placeholder="Логин">
+          </label>
+          <label class="login__input-wrap" for="input">
+            <input class="login__input" type="password" name="password" placeholder="Пароль">
+          </label>
+          <button class="login__btn btn-reset" type="submit">Войти</button>
+        </form>
         <div class="login__socials">
           <p class="login__socials-text">
             Войти с помощью:
@@ -62,7 +70,7 @@
             </li>
           </ul>
         </div>
-      </form>
+      </div>
       <div class="header__logo-block">
         <a href="#" class="header__logo" aria-label="Логотип W-Wave, ссылка на главную страницу"><svg width="160"
             height="20" viewBox="0 0 160 20" fill="none" xmlns="http://www.w3.org/2000/svg">
